# jitify

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile  Doxyfile2  LICENSE.TXT  README.md  jitify2.hpp  jitify2_cuda.hpp  jitify2_hip.hpp  jitify2_preprocess.cpp  jitify2_test.cpp  jitify2_test_kernels.cu  jitify2_user_guide.md  stringify.cpp
docs/: allapi.rst  conf.py  index.md  requirements.txt
docs/.sphinx/: _toc.yml.in
docs/doxygen/: Doxyfile
docs/user_guide/: 0_basic_usage.md  1_error_handling.md  2_basic_workflow.md  3_advanced_workflow.md  4_unit_tests.md  5_build_options.md  6_compiler_options.md
example_headers/: class_arg_kernel.cuh  constant_header.cuh  my_header1.cuh  my_header2.cuh  my_header3.cuh
scripts/: build_and_run_tests.sh
